# avahi-wrapper

./: CMakeLists.txt  README.md
example/: browse_test.cpp  publish_test.cpp
include/avahi_wrapper/: mdns.hpp  util.hpp
src/: mdns.cpp  util.cpp
